admission and diploma page

--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -1,4 +1,6 @@
-**Chicken can't type, so we asked ChatGPT to write the following paragraph for us:**
+# TL; DR: Chicken CANNOT TYPE
+
+so we asked ChatGPT to write the following paragraph for us:
 
 Welcome to Wild Chicken University, the premier institution for all your poultry-related needs. Our world-renowned faculty of chicken experts will teach you everything you need to know about these feathery friends, from their clucking communication to their delectable taste (just kidding, we don't eat our students).
 
