page restructure, mdx default layout

--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -1,6 +1,11 @@
+import NavPath from "../../components/nav-path"
+
+        <NavPath path="about" />
+
 # TL; DR: Chicken CANNOT TYPE
 
-so we asked ChatGPT to write the following paragraph for us:
+so we asked ChatGPT to write the following paragraph for us:   
+(I mean, OpenAI should create a [ChickenGPT](https://cybernews.com/tech/catgpt-chatbot-that-meows-everything/) for us)
 
 Welcome to Wild Chicken University, the premier institution for all your poultry-related needs. Our world-renowned faculty of chicken experts will teach you everything you need to know about these feathery friends, from their clucking communication to their delectable taste (just kidding, we don't eat our students).
 
@@ -10,11 +15,32 @@ We offer a wide range of courses, from "How to Train Your Chicken to Play Chess"
 
 If you're tired of the traditional university application process, don't worry. At Wild Chicken University, we don't care about your GPA, test scores, or extracurricular activities. All we care about is your love for chickens. So come join us, and let's cluck our way to academic success!
 
-**Enough BS, wtf is wcu?**
+## [Mascot](https://mascot.wcu.edu.pl/)
+
+We've made a mascot for Wild Chicken University. Of course, it is a chicken 🐔️.
+
+Click on the subtitle to meet our mascot. Note that your browser must support [WebGL](https://wiki.archlinux.org/title/Firefox/Privacy#1.15).
+
+
+## Academic Achievements
+
+Read this [masterpiece](https://isotropic.org/papers/chicken.pdf) written on Jan 18<sup>th</sup>, 2007
+
+One of our Chicklumni created this [game](https://cianokias.itch.io/wild-chicken-university):
+
+        <iframe frameborder="0" src="https://itch.io/embed/1361579" width="552" height="167"><a href="https://cianokias.itch.io/wild-chicken-university">野鸡大学 by Ziduan</a></iframe>
+
+## Enough BS, WTF is wcu?
 
 Wild Chicken University (also known as a diploma mill or degree mill) is an organization that awards academic degrees and diplomas with substandard or no academic study and without recognition by official educational accrediting bodies. The purchaser can then claim to hold an academic degree, and the organization is motivated by making a profit. These degrees are often awarded based on vaguely construed life experience. Some such organizations claim accreditation by non-recognized/unapproved accrediting bodies set up for the purposes of providing a veneer of authenticity. While the terms "degree mill" and "diploma mill" are commonly used interchangeably, within the academic community a distinction is sometimes drawn: 
 
 - A "degree mill" issues "real" diplomas from non regionally accredited "universities", which may be legal in some states but are generally illegitimate universities. 
 - A "diploma mill" issues counterfeit diplomas which bear the names of legitimate universities. 
 
-Partially copied from [Wild Chicken University on Facebook(or should we call it Meta?)](https://www.facebook.com/Wild-Chicken-University-170013173058220/about)
+Partially copied from [Wild Chicken University on Facebook (or should we call it Meta?)](https://www.facebook.com/Wild-Chicken-University-170013173058220/about)
+
+
+## Donation
+
+We understand no one actually read all this nonsense, but we've decided to leave our donation link here anyways:
+82msVko36MjhAcmSfeEGExUbLvyRMnS7kCYUa7ZHZNeTUWMHm69HhndKYFJSnEgjM9JypkeaLqgtWD46xBkpzJ2J4xddHap
