--- a/app/admission/bs.mdx
+++ b/app/admission/bs.mdx
@@ -7,3 +7,5 @@ NO fees💰️ to apply. NO supplements📝 to submit. NO extra essays to write.
 Screw flywire, nobody likes your currency conversion rate
 
 Good Luck on your college app!
+
+Watch the [campus tour video](https://youtu.be/dQw4w9WgXcQ)
