refactor and improvements based on PR #3 (#4)
* fixed readme + added a legit major

* fixed diploma font size overflow

* added a proper privacy policy page

* Refactor and improvements based on PR #3

Signed-off-by: Mr-Sheep <24599209+Mr-Sheep@users.noreply.github.com>

* Refactor and improvements based on PR #3

Signed-off-by: Mr-Sheep <24599209+Mr-Sheep@users.noreply.github.com>

---------

Signed-off-by: Mr-Sheep <24599209+Mr-Sheep@users.noreply.github.com>
Co-authored-by: Andrew Yang <ay3yang@gmail.com>
Co-authored-by: Andrew Yang <45147270+andytubeee@users.noreply.github.com>

--- a/app/pages/privacy/page.mdx
+++ b/app/pages/privacy/page.mdx
@@ -1,6 +1,28 @@
+# Privacy Policy
 
+TL,DR: Wild Chicken University is a FRONT-END ONLY project. We cannot see any of your information. We CANNOT upload any of your data to our servers. Actually, we don't even have any servers.
 
-# Possible things made impossible
+### Data Collection and Storage
 
-Wild Chicken University is a FRONT-END ONLY project. We cannot see any of your information.
-We CANNOT upload any of your data to our servers(actually, we don't even have any servers lmfao) 
+Your data stays with you. We collect absolutely nothing. We're like that nosy neighbor who just moved in but is too shy to ask you anything.
+
+We should probably, however, try steal all your personal data, unlike all the major techs, and sell them to some third parties. Luckily, our storage capabilities are as impressive as a chicken trying to fly.  
+
+### How We Use Your Information
+
+We don't. We can't. We won't. Even if we had servers, our non-existent IT department, like many other big universities, 
+wouldn't know what to do with your data. However, we are planning on training our chicken to type. We share your data with no one. Not because we're super ethical (though we absolutely are), but because there's nothing for us to share.
+
+### Data Security
+
+No data means no security breaches, no leaks. **100% Secure**.
+
+### Changes to This Policy
+
+If, in some bizarre twist of fate, we ever get servers or start collecting data, we'll let you know. Until then, please feel free to enjoy the peace of mind knowing your data is safe from us.
+
+### Contact
+
+If you have any questios about our privacy policy, feel free to contact us. Not that we have any contact info to give you, but if we did, we'd probably suggest sending a carrier pigeion OR implementing [RFC1149](https://www.rfc-editor.org/rfc/rfc1149).
+
+Thank you for choosing Wild Chicken University, where your data is as safe as an egg in a barn.
