adding navpath for privacy page
Signed-off-by: Mr-Sheep <24599209+Mr-Sheep@users.noreply.github.com>

--- a/app/pages/privacy/page.mdx
+++ b/app/pages/privacy/page.mdx
@@ -1,3 +1,7 @@
+import NavPath from "../../components/nav-path"
+
+        <NavPath path="privacy" />
+
 # Privacy Policy
 
 TL,DR: Wild Chicken University is a FRONT-END ONLY project. We cannot see any of your information. We CANNOT upload any of your data to our servers. Actually, we don't even have any servers.
