adding utteranc.es section in our privacy policy
Signed-off-by: Mr-Sheep <24599209+Mr-Sheep@users.noreply.github.com>

--- a/app/pages/privacy/page.mdx
+++ b/app/pages/privacy/page.mdx
@@ -12,6 +12,8 @@ Your data stays with you. We collect absolutely nothing. We're like that nosy ne
 
 We should probably, however, try steal all your personal data, unlike all the major techs, and sell them to some third parties. Luckily, our storage capabilities are as impressive as a chicken trying to fly.  
 
+Pleaes, however, note that the commenting system we are using (utteranc.es) has it's own privacy policy. Pleaes read it carefully [here](https://github.com/utterance/utterances/blob/master/PRIVACY-POLICY.md) should you have any question.
+
 ### How We Use Your Information
 
 We don't. We can't. We won't. Even if we had servers, our non-existent IT department, like many other big universities, 
