--- a/app/pages/news/page.mdx
+++ b/app/pages/news/page.mdx
@@ -2,6 +2,10 @@ import NavPath from "../../components/nav-path"
 
         <NavPath path="news" />
 
+## 06.27.2024
+
+Fixing major bugs, adding more contents.
+
 ## 11.19.2023
 
 Fully redesigned portal page for Wild Chicken University is now online.
