--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -44,3 +44,13 @@ Partially copied from [Wild Chicken University on Facebook (or should we call it
 
 We understand no one actually read all this nonsense, but we've decided to leave our donation link here anyways:
 82msVko36MjhAcmSfeEGExUbLvyRMnS7kCYUa7ZHZNeTUWMHm69HhndKYFJSnEgjM9JypkeaLqgtWD46xBkpzJ2J4xddHap
+
+## 寫在最後
+我很意外你有看到這裏 :) 
+
+原始版本的 Wild Chicken University [「官網」](https://old.wcu.edu.pl)是修改自 Northwestern University 的錄取結果網站，當年被拒之後覺得很好玩就做了這個網站。
+
+官網的內容經過數次填充和修改成了現在的模樣。雖然並不認爲會有人真的仔細去閱讀，我依舊在字裏行間埋藏了許多有趣的內容。
+作爲一個玩笑，WCU 達成了我製作他的初衷。雖然做工粗糙，但我很開心大家可以通過 WCU 收穫快樂，也希望能夠讓暫時沒有 offer 的朋友們 feel better。
+
+Best Wishes
