disalimer content update

--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -1,4 +1,5 @@
 import { Separator } from "@/components/ui/separator"
+import { Button } from "@/components/ui/button"
 
 ## Chicken CANT TYPE
 
@@ -13,11 +14,13 @@ We offer a wide range of courses, from "How to Train Your Chicken to Play Chess"
 
 If you're tired of the traditional university application process, don't worry. At Wild Chicken University, we don't care about your GPA, test scores, or extracurricular activities. All we care about is your love for chickens. So come join us, and let's cluck our way to academic success!
 
-## [Mascot](https://mascot.wcu.edu.pl/)
+## Mascot
 
-We've made a mascot for Wild Chicken University. Of course it is a chicken 🐔️.
+We've made a mascot for Wild Chicken University. Surprisingly, it is a CHICKEN.
 
-Click on the subtitle to meet our mascot. Note that your browser must support [WebGL](https://wiki.archlinux.org/title/Firefox/Privacy#1.15).
+<Button ><a href="https://mascot.wcu.edu.pl">Mascot</a></Button>
+
+Note that your browser must support [WebGL](https://wiki.archlinux.org/title/Firefox/Privacy#1.15).
 
 ## Copyright & Fair Use
 
@@ -40,13 +43,11 @@ Partially copied from [Wild Chicken University on Facebook (or should we call it
 We understand no one actually read all these nonsense, but we've decided to leave our donation link here anyways :)
 82msVko36MjhAcmSfeEGExUbLvyRMnS7kCYUa7ZHZNeTUWMHm69HhndKYFJSnEgjM9JypkeaLqgtWD46xBkpzJ2J4xddHap
 
-
-
 ## 寫在最後
 
 我很意外你有看到這裏 :) 
 
-原始版本的 Wild Chicken University [「官網」](https://old.wcu.edu.pl)是修改自 Northwestern University 的錄取結果網站，當年被拒之後覺得很好玩就做了這個網站。
+原始版本的 Wild Chicken University [「官網」](https://old.wcu.edu.pl)是修改自 Northwestern University 的錄取結果頁面，當年被拒之後覺得很好玩就做了這個網站。
 
 官網的內容經過數次填充和修改成了現在的模樣。雖然並不認爲會有人真的仔細去閱讀，我依舊在字裏行間埋藏了許多有趣的內容。
 作爲一個玩笑，WCU 達成了我製作他的初衷。雖然做工粗糙，但我很開心大家可以通過 WCU 收穫快樂，也希望能夠讓暫時沒有 offer 的朋友們 feel better。
