--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -1,4 +1,15 @@
+import { Alert, AlertDescription, AlertTitle } from "@/components/ui/alert"
+import { AlertCircleIcon } from "lucide-react"
+
 # Disclaimer (and other stuff)
+
+<Alert variant="destructive">
+  <AlertCircleIcon /><AlertTitle>Heads up!</AlertTitle>
+  <AlertDescription>
+    WE ARE NOT AFFILIATED WITH ANY EDUCATIONAL INSTITUTION. 
+    FILES DOWNLOADED FROM THIS SITE DOESNOT HAVE ANY LEGAL EFFECT. NOR ARE WE RESPONSIBLE ANY FILES CREATED/DOWNLOADED FROM THIS SITE.
+  </AlertDescription>
+</Alert>
 
 The project is licensed under [GPLv3](https://www.gnu.org/licenses/quick-guide-gplv3.en.html), a copyleft licnese for software and other kinds of works. 
 Fonts, pictures, and other assets may or may not have their own license.
@@ -9,12 +20,19 @@ In no event shall the Wild Chicken University be liable to you or anyone else fo
 indirect or consequential damages of any kind, or any damages whatsoever, including without limitation, loss of profit,
 loss of use, savings or revenue, or the claims of third parties, whether or not the Wild Chicken University has 
 been advised of the possibility of such loss, however caused and on any theory of liability, arising out of or in 
-connection with the possession, use or performance of this website. We are NOT affiliated with any educational institution.
-Files downloaded from Wild Chicken DOES NOT have ANY legal effect. We are NOT responsible any files downloaded from this site. 
+connection with the possession, use or performance of this website. 
 
-Our logo is borrowed from UPenn; signed by our beloved director of admission, Colonel Harland David Sanders, the founder of KFC (at the end of the day, we are a chicken university). 
-The content of the rejection letter is copied from [Northwestern University](https://northwestern.edu) since they were my ED (early decision) school and they rejected me.
-The logo and the web design(and everything also) is a parody, which according to [Section 30A of the CDPA](https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made) fair dealing with a copyrighted work for the purposes of caricature, parody, or pastiche is allowed; 
-please refer to [Cornell Law School's website](https://www.law.cornell.edu/wex/parody) for more information.
+
+## Fairuse of Copyrighted Content
+
+The logo utilized herein is derived from the University of Pennsylvania and is presented for parody and illustrative purposes only. The accompanying signature—attributed to Colonel Harland David Sanders, founder of Kentucky Fried Chicken—serves as a satirical embellishment consistent with our self-styled identity as a “chicken university.”
+
+The textual content of the rejection letter(s) is adapted from material of Northwestern University, which was the institution of the author’s Early Decision application. Its inclusion is likewise intended solely for [parody](https://www.law.cornell.edu/wex/parody) use. 
+
+Acording to [17 U.S. Code § 107](https://www.law.cornell.edu/uscode/text/17/107):
+
+> the fair use of a copyrighted work, including such use by reproduction in copies or phonorecords or by any other means specified by that section, for purposes such as criticism, comment, news reporting, teaching (including multiple copies for classroom use), scholarship, or research, is not an infringement of copyright.
+
+## Chicken Rights
 
 **NO chickens were harmed during the creation of this website.** 
