--- a/app/pages/achievements/page.mdx
+++ b/app/pages/achievements/page.mdx
@@ -4,7 +4,7 @@ import Image from 'next/image';
 
 ### Published Papers
 
-Read this [masterpiece](/chicken.pdf) written on Jan 18<sup>th</sup>, 2007
+Read this [masterpiece](/chicken.pdf) written on Jan 18<sup>th</sup>, 2007: 
 
 ```
 @article{Chicken,
@@ -24,6 +24,7 @@ One of our Chicklumni created this [game](https://cianokias.itch.io/wild-chicken
       src="/images/WCU_Game_Banner.webp"
       width={500}
       height={500}
+      alt="WCU Game banner"
     />
 
 <iframe src="https://itch.io/embed/1361579" width="552" height="167"><a href="https://cianokias.itch.io/wild-chicken-university">野鸡大学 by Ziduan</a></iframe>
