--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -1,5 +1,6 @@
 import { Separator } from "@/components/ui/separator"
 import { Button } from "@/components/ui/button"
+import { Badge } from "@/components/ui/badge"
 
 ## Chicken CANT TYPE
 
@@ -14,11 +15,17 @@ We offer a wide range of courses, from "How to Train Your Chicken to Play Chess"
 
 If you're tired of the traditional university application process, don't worry. At Wild Chicken University, we don't care about your GPA, test scores, or extracurricular activities. All we care about is your love for chickens. So come join us, and let's cluck our way to academic success!
 
+## Social Media Platform
+
+At request, we have created an instagram account <Badge asChild variant="default"><a href="https://www.instagram.com/real_wild_chicken_university/" target="_blank">@real_wild_chicken_university</a></Badge> so people can mention it in their profile. 
+
+It will, however, not publish content, nor send or receive messages. Any posts, direct messages, or interactions originating from this account should be disregarded as unauthentic.
+
 ## Mascot
 
 We've made a mascot for Wild Chicken University. Surprisingly, it is a CHICKEN.
 
-<Button ><a href="https://mascot.wcu.edu.pl">Mascot</a></Button>
+<Button ><a href="https://mascot.wcu.edu.pl" target="_blank">Mascot</a></Button>
 
 Note that your browser must support [WebGL](https://wiki.archlinux.org/title/Firefox/Privacy#1.15).
 
