--- a/app/pages/achievements/page.mdx
+++ b/app/pages/achievements/page.mdx
@@ -27,4 +27,4 @@ One of our Chicklumni created this [game](https://cianokias.itch.io/wild-chicken
       alt="WCU Game banner"
     />
 
-<iframe src="https://itch.io/embed/1361579" width="552" height="167"><a href="https://cianokias.itch.io/wild-chicken-university">野鸡大学 by Ziduan</a></iframe>
+<iframe src="https://itch.io/embed/1361579" width="552" height="167"><a href="https://cianokias.itch.io/wild-chicken-university" target="_blank">野鸡大学 by Ziduan</a></iframe>
