updating WCU logo

--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -27,6 +27,10 @@ connection with the possession, use or performance of this website and its relat
 
 The logo utilized herein is derived from the University of Pennsylvania and is presented for parody and illustrative purposes only. The accompanying signature—attributed to Colonel Harland David Sanders, founder of Kentucky Fried Chicken—serves as a satirical embellishment consistent with our self-styled identity as a “chicken university.”
 
+The fish on the logo is from Hungary Town [Mesztegnyő's](https://commons.wikimedia.org/wiki/File:Coa_Hungary_Town_Mesztegny%C5%91.svg) Coat of Arm and official coat of arms and flags, being defined in such a regulation, are thus in the public domain in Hungary, and also in the US, according to § 313.6(C)(2) Compendium of U.S. Copyright Office Practices, 3rd ed. 2014 (Compendium (Third))
+
+Likewise, the daisy flower on the logo is from DEU [Marienfeld (Westf.)](https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg) Coat of Arm and according to § 5 Abs. 1 of the German Copyright law, official works like coats of arms are in the public domain.
+
 The textual content of the rejection letter(s) is adapted from material of Northwestern University, which was the institution of the author’s Early Decision application. Its inclusion is likewise intended solely for [parody](https://www.law.cornell.edu/wex/parody) use. 
 
 Acording to [17 U.S. Code § 107](https://www.law.cornell.edu/uscode/text/17/107):
