--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -1,8 +1,18 @@
 import { Separator } from "@/components/ui/separator"
 import { Button } from "@/components/ui/button"
 import { Badge } from "@/components/ui/badge"
+import Image from 'next/image'
 
 ## Chicken CANT TYPE
+
+<Image
+      src="/images/Chicken_February_2009-1.webp"
+      width={562}
+      height={800}
+      alt="A running chicken"
+    />
+
+<div className="text-xs">credit: Alvesgaspar, [CC BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0), via [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Chicken_February_2009-1.jpg)</div>
 
 so we asked ChatGPT (probably 3.5) to write the following paragraph for us:   
 (I mean, OpenAI should create a [ChickenGPT](https://cybernews.com/tech/catgpt-chatbot-that-meows-everything/) for us)
