--- a/app/pages/privacy/page.mdx
+++ b/app/pages/privacy/page.mdx
@@ -1,6 +1,25 @@
+import { AlertCircleIcon } from "lucide-react"
+import { Separator } from "@/components/ui/separator"
+import {
+    Alert,
+    AlertDescription,
+    AlertTitle,
+} from "@/components/ui/alert"
+
 # Privacy Policy
 
-TL,DR: Wild Chicken University is a FRONT-END ONLY project. We cannot see any of your information. We CANNOT upload any of your data to our servers. Actually, we don't even have any servers.
+<Alert variant="destructive">
+        <AlertCircleIcon />
+        <AlertTitle>Heads up!</AlertTitle>
+        <AlertDescription>
+          The information below applies to all sections of this website, with the exception of the Diploma Email Sending service. 
+          For details regarding that service, please refer to its dedicated section below.
+        </AlertDescription>
+      </Alert>
+
+TL,DR: Wild Chicken University is a FRONT-END ONLY project
+
+We cannot see any of your information. We CANNOT upload any of your data to our servers. Actually, we don't even have any servers.
 
 ### Data Collection and Storage
 
@@ -29,3 +48,25 @@ If, in some bizarre twist of fate, we ever get servers or start collecting data,
 If you have any questios about our privacy policy, feel free to contact us. Not that we have any contact info to give you, but if we did, we'd probably suggest sending a carrier pigeion OR implementing [RFC1149](https://www.rfc-editor.org/rfc/rfc1149).
 
 Thank you for choosing Wild Chicken University, where your data is as safe as an egg in a barn.
+
+<Separator />
+
+## Exception: Diploma Email Sending
+
+The diploma email sending services is hosted on cloudflare workers with its source code available on [github](https://github.com/WildChickenUniversity/DiplomaEmailCF). 
+
+To prevent abusive use of the service, we added cloudflare turnsile (aka a better captcha) before you can submit the form.
+
+Before you can submit the form, a request will be sent to the Turnstile endpoint for verification. For more details, please refer to the [Turnstile Privacy Addendum](https://www.cloudflare.com/turnstile-privacy-policy/).
+
+When you click **Send a Copy via Email**, the following steps take place:
+
+- A request is sent to the Turnstile endpoint for processing.
+- Once validated, another request is sent to the Cloudflare Worker's endpoint.
+
+The information transmitted includes:
+
+- Your name (as entered in the form)
+- Your email address
+- Your major and degree
+- The Turnstile token
