--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -22,20 +22,23 @@ loss of use, savings or revenue, or the claims of third parties, whether or not 
 been advised of the possibility of such loss, however caused and on any theory of liability, arising out of or in 
 connection with the possession, use or performance of this website and its related services. 
 
+## Fair Use of Copyrighted Content
 
-## Fairuse of Copyrighted Content
+The accompanying signature—attributed to Colonel Harland David Sanders, founder of Kentucky Fried Chicken, and Richard McDonald, co-founder of McDonald's—serves as a satirical embellishment consistent with our self-styled identity as a “chicken university.”
 
-The logo utilized herein is derived from the University of Pennsylvania and is presented for parody and illustrative purposes only. The accompanying signature—attributed to Colonel Harland David Sanders, founder of Kentucky Fried Chicken—serves as a satirical embellishment consistent with our self-styled identity as a “chicken university.”
+The fish motif is taken from Hungary Town [Mesztegnyő's](https://commons.wikimedia.org/wiki/File:Coa_Hungary_Town_Mesztegny%C5%91.svg) coat of arms. Under Hungarian copyright law (1999./LXXVI. §1(4)), official coats of arms and flags are public domain, which is likewise recognized in the U.S. (§313.6(C)(2) Compendium of U.S. Copyright Office Practices, 3rd ed. 2014).
 
-The fish on the logo is from Hungary Town [Mesztegnyő's](https://commons.wikimedia.org/wiki/File:Coa_Hungary_Town_Mesztegny%C5%91.svg) Coat of Arm. According to 1.§ (4) of the Hungarian copyright law (1999./LXXVI.) official coat of arms and flags, being defined in such a regulation, are thus in the public domain in Hungary, and also in the US, according to § 313.6(C)(2) Compendium of U.S. Copyright Office Practices, 3rd ed. 2014 (Compendium (Third))
+The daisy motif is from DEU [Marienfeld (Westf.)](https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg) coat of arms. Under §5(1) of German copyright law, official works like coats of arms are public domain.
 
-Likewise, the daisy flower on the logo is from DEU [Marienfeld (Westf.)](https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg) Coat of Arm. According to § 5 Abs. 1 of the German Copyright law, official works like coats of arms are in the public domain.
+The textual content of the rejection letter(s) is adapted from Northwestern University admissions material. Its inclusion is solely for [parody](https://www.law.cornell.edu/wex/parody) purposes.  
 
-The textual content of the rejection letter(s) is adapted from material of Northwestern University, which was the institution of the author’s Early Decision application. Its inclusion is likewise intended solely for [parody](https://www.law.cornell.edu/wex/parody) use. 
+According to [17 U.S. Code § 107](https://www.law.cornell.edu/uscode/text/17/107):
 
-Acording to [17 U.S. Code § 107](https://www.law.cornell.edu/uscode/text/17/107):
+> “The fair use of a copyrighted work, including such use by reproduction in copies or phonorecords or by any other means specified by that section, for purposes such as criticism, comment, news reporting, teaching (including multiple copies for classroom use), scholarship, or research, is not an infringement of copyright.”
 
-> the fair use of a copyrighted work, including such use by reproduction in copies or phonorecords or by any other means specified by that section, for purposes such as criticism, comment, news reporting, teaching (including multiple copies for classroom use), scholarship, or research, is not an infringement of copyright.
+### Wild Chicken Univeristy Logo
+
+The composite logo design presented herein is offered for parody and illustrative purposes, and is licensed under the Attribution-NonCommercial-ShareAlike 4.0 International [(CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/BY-NC-SA/4.0/).
 
 ## Chicken Rights
 
