alumni application entry

--- a/app/diploma/components/diplomaText.mdx
+++ b/app/diploma/components/diplomaText.mdx
@@ -4,3 +4,5 @@ and probably all the McDonald's with a [working ice-cream machine](https://mcbro
 A [diploma](https://en.wikipedia.org/wiki/Diploma) is a document awarded by an educational institution
 testifying the recipient has graduated by successfully completing their courses of studies. 
 Historically, it has also referred to a charter or official document of diplomacy. 
+
+If you would like to show case Wild Chicken University on your GitHub profile page, please open an issue [here](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new).
