--- a/app/admission/components/admissionText.mdx
+++ b/app/admission/components/admissionText.mdx
@@ -3,6 +3,8 @@ import { Badge } from "@/components/ui/badge"
 We realize you've been anxiously awaiting your decision from Wild Chicken and want to let you know that your application status will never be "under review". 
 We do understand how bad you feel when you get a rejection letter from the university, that's why we won't say “We regret that we are unable to offer you admission.”
 
+If you would like to show case Wild Chicken University on your GitHub profile page, please open an issue [here](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new).
+
 <Badge variant="default">NO APPLICATION FEE</Badge>
 <Badge variant="outline">NO PERSONAL STATEMENTS</Badge>
 <Badge variant="destructive">SCREW FLYWIRE</Badge>
