alumni application entry

--- a/app/admission/components/admissionText.mdx
+++ b/app/admission/components/admissionText.mdx
@@ -1,13 +1,12 @@
 import { Badge } from "@/components/ui/badge"
 
 We realize you've been anxiously awaiting your decision from Wild Chicken and want to let you know that your application status will never be "under review". 
-We do understand how bad you feel when you get a rejection letter from the university, that's why we won't say “We regret that we are unable to offer you admission.”
+We do understand how bad you feel when you get a rejection letter from the university, that's why we won't say “We regret that we are unable to offer you admission.” 
 
-If you would like to show case Wild Chicken University on your GitHub profile page, please open an issue [here](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new).
+Please watch our [campus tour video](https://youtu.be/dQw4w9WgXcQ)
+
 
 <Badge variant="default">NO APPLICATION FEE</Badge>
 <Badge variant="outline">NO PERSONAL STATEMENTS</Badge>
 <Badge variant="destructive">SCREW FLYWIRE</Badge>
-
-Also please watch our [campus tour video](https://youtu.be/dQw4w9WgXcQ)
 
