--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -25,13 +25,7 @@ We offer a wide range of courses, from "How to Train Your Chicken to Play Chess"
 
 If you're tired of the traditional university application process, don't worry. At Wild Chicken University, we don't care about your GPA, test scores, or extracurricular activities. All we care about is your love for chickens. So come join us, and let's cluck our way to academic success!
 
-## Social Media Platform
-
-At request, we have created an instagram account <Badge asChild variant="default"><a href="https://www.instagram.com/real_wild_chicken_university/" target="_blank">@real_wild_chicken_university</a></Badge> so people can mention it in their profile. 
-
-It will, however, not publish content, nor send or receive messages. Any posts, direct messages, or interactions originating from this account should be disregarded as unauthentic.
-
-## Mascot
+### Mascot
 
 We've made a mascot for Wild Chicken University. Surprisingly, it is a CHICKEN.
 
@@ -39,13 +33,13 @@ We've made a mascot for Wild Chicken University. Surprisingly, it is a CHICKEN.
 
 Note that your browser must support [WebGL](https://wiki.archlinux.org/title/Firefox/Privacy#1.15).
 
-## Copyright & Fair Use
+### Copyright & Fair Use
 
 Please refer to [disclaimer](/pages/disclaimer)
 
 <Separator />
 
-## Enough BS, WTF is wcu?
+### Enough BS, WTF is wcu?
 
 Wild Chicken University (also known as a diploma mill or degree mill) is an organization that awards academic degrees and diplomas with substandard or no academic study and without recognition by official educational accrediting bodies. The purchaser can then claim to hold an academic degree, and the organization is motivated by making a profit. These degrees are often awarded based on vaguely construed life experience. Some such organizations claim accreditation by non-recognized/unapproved accrediting bodies set up for the purposes of providing a veneer of authenticity. While the terms "degree mill" and "diploma mill" are commonly used interchangeably, within the academic community a distinction is sometimes drawn: 
 
@@ -55,13 +49,13 @@ Wild Chicken University (also known as a diploma mill or degree mill) is an orga
 Partially copied from [Wild Chicken University on Facebook (or should we call it Meta?)](https://www.facebook.com/Wild-Chicken-University-170013173058220/about)
 
 
-## Donation
+### Donation
 
 We understand no one actually read all these nonsense, but we've decided to leave our donation link here anyways :)
 
 82msVko36MjhAcmSfeEGExUbLvyRMnS7kCYUa7ZHZNeTUWMHm69HhndKYFJSnEgjM9JypkeaLqgtWD46xBkpzJ2J4xddHap
 
-## 寫在最後
+### 寫在最後
 
 我很意外你有看到這裏 :) 
 
