--- a/app/pages/alumni/page.mdx
+++ b/app/pages/alumni/page.mdx
@@ -32,3 +32,11 @@ We are also a proud member of [U4 Group](https://github.com/U4Group) of GitHub R
 At request, we have created an instagram account <Badge asChild variant="default"><a href="https://www.instagram.com/real_wild_chicken_university/" target="_blank">@real_wild_chicken_university</a></Badge> so people can mention it in their profile. 
 
 It will, however, not publish content, nor send or receive messages. Any posts, direct messages, or interactions originating from this account should be disregarded as unauthentic.
+
+<Separator />
+
+### Alumni Emails
+
+Running an email service is easy, but preventing abuse is hard. We cant stop people from using Wild Chicken emails to apply for real educational benefits.
+
+So NO, we do not have any education email. Please go out and turn right on your own if you want to get educational privileges through WCU.
