fix issue creeation link w/ template

--- a/app/pages/alumni/page.mdx
+++ b/app/pages/alumni/page.mdx
@@ -9,9 +9,10 @@ import { Badge } from "@/components/ui/badge";
 ### GitHub
 
 If you would like to show case Wild Chicken University on your GitHub profile page, please open an issue 
-in the github repo to request an invite to the organization.
+using the alumni application template in our github repo to request an invite to the organization.
 
-<Button variant="default">[Github](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new)</Button>
+
+<Button variant="default">[Github](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new?template=apply.md)</Button>
 
 If your application is accepted, you will receive an offer email with an invitation link to the Alumni team. 
 Alternatively, you can try [this link](https://github.com/orgs/WildChickenUniversity/invitation?via_email=1).
