logo license update

--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -24,11 +24,11 @@ connection with the possession, use or performance of this website and its relat
 
 ## Fair Use of Copyrighted Content
 
+### Signatures
+
 The accompanying signature—attributed to Colonel Harland David Sanders, founder of Kentucky Fried Chicken, and Richard McDonald, co-founder of McDonald's—serves as a satirical embellishment consistent with our self-styled identity as a “chicken university.”
 
-The fish motif is taken from Hungary Town [Mesztegnyő's](https://commons.wikimedia.org/wiki/File:Coa_Hungary_Town_Mesztegny%C5%91.svg) coat of arms. Under Hungarian copyright law (1999./LXXVI. §1(4)), official coats of arms and flags are public domain, which is likewise recognized in the U.S. (§313.6(C)(2) Compendium of U.S. Copyright Office Practices, 3rd ed. 2014).
-
-The daisy motif is from DEU [Marienfeld (Westf.)](https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg) coat of arms. Under §5(1) of German copyright law, official works like coats of arms are public domain.
+### Textual Content
 
 The textual content of the rejection letter(s) is adapted from Northwestern University admissions material. Its inclusion is solely for [parody](https://www.law.cornell.edu/wex/parody) purposes.  
 
@@ -36,9 +36,32 @@ According to [17 U.S. Code § 107](https://www.law.cornell.edu/uscode/text/17/10
 
 > “The fair use of a copyrighted work, including such use by reproduction in copies or phonorecords or by any other means specified by that section, for purposes such as criticism, comment, news reporting, teaching (including multiple copies for classroom use), scholarship, or research, is not an infringement of copyright.”
 
+
+### Elements of Our Logo
+
+- The fish motif is taken from Hungary Town [Mesztegnyő's](https://commons.wikimedia.org/wiki/File:Coa_Hungary_Town_Mesztegny%C5%91.svg) coat of arms. Under Hungarian copyright law (1999./LXXVI. §1(4)), official coats of arms and flags are public domain, which is likewise recognized in the U.S. (§313.6(C)(2) Compendium of U.S. Copyright Office Practices, 3rd ed. 2014).
+
+- The daisy motif is from DEU [Marienfeld (Westf.)](https://commons.wikimedia.org/wiki/File:DEU_Marienfeld_(Westf.)_COA.svg) coat of arms. Under §5(1) of German copyright law, official works like coats of arms are public domain.
+
+- The chicken is from LadyofHats, Public domain, via [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Chicken_silhouette_02.svg)
+
 ### Wild Chicken Univeristy Logo
 
 The composite logo design presented herein is offered for parody and illustrative purposes, and is licensed under the Attribution-NonCommercial-ShareAlike 4.0 International [(CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/BY-NC-SA/4.0/).
+
+本文件所示之合成徽標設計，僅供戲仿及示範性用途，並依據 **姓名標示-非商業性-相同方式分享 4.0** 國際授權條款 [(CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/BY-NC-SA/4.0/) 授權使用與發佈：
+
+```
+© Mr-Sheep, licensed under [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/).
+```
+
+Covered Assets (and their variants):
+
+- [favicon.svg](https://wcu.edu.pl/images/favicon.svg)
+- [WCU_Alumni.svg](https://wcu.edu.pl/images/WCU_Alumni.svg)
+- [WCU_Alumni_White.svg](https://wcu.edu.pl/images/WCU_Alumni_White.svg)
+- [Wild_Chicken.svg](https://wcu.edu.pl/images/Wild_Chicken.svg)
+- [Wild_Chicken_White.svg](https://wcu.edu.pl/images/Wild_Chicken_White.svg)
 
 ## Chicken Rights
 
