--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -37,7 +37,7 @@ Note that your browser must support [WebGL](https://wiki.archlinux.org/title/Fir
 
 Please refer to [disclaimer](/pages/disclaimer)
 
-<Separator />
+<Separator className="my-4" />
 
 ### Enough BS, WTF is wcu?
 
