--- a/app/pages/alumni/page.mdx
+++ b/app/pages/alumni/page.mdx
@@ -17,10 +17,10 @@ import Image from "next/image"
 ### GitHub
 
 If you would like to show case Wild Chicken University on your GitHub profile page, please open an issue 
-using the **"Alumni Application"** template in our github repo to request an invite to the organization.
+using the **"Alumni Application"** template in our GitHub repo to request an invite to the organization.
 
 
-<Button variant="default">[Github](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new?template=apply.md)</Button>
+<Button variant="default">[GitHub](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new?template=apply.md)</Button>
 
 If your application is accepted, you will receive an offer email with an invitation link to the Alumni team. 
 Alternatively, you can try [this link](https://github.com/orgs/WildChickenUniversity/invitation?via_email=1).
@@ -28,7 +28,7 @@ If neither worked for you, plesae contact us directly.
 
 If you accidentally created an empty issue, please close it and open a new ticket using the provided template.
 
-<Separator />
+<Separator className="my-4" />
 
 ### Sister Universities
 
@@ -36,7 +36,7 @@ We have a close connection with [Home University](https://github.com/HMUniversit
 
 We are also a proud member of [U4 Group](https://github.com/U4Group) of GitHub Research Universities.
 
-<Separator />
+<Separator className="my-4" />
 
 ### Social Media
 
@@ -44,7 +44,7 @@ At request, we have created an instagram account <Badge asChild variant="default
 
 It will, however, not publish content, nor send or receive messages. Any posts, direct messages, or interactions originating from this account should be disregarded as unauthentic.
 
-<Separator />
+<Separator className="my-4" />
 
 ### Alumni Emails
 
