--- a/app/pages/achievements/page.mdx
+++ b/app/pages/achievements/page.mdx
@@ -16,6 +16,17 @@ Read this [masterpiece](/chicken.pdf) written on Jan 18<sup>th</sup>, 2007:
 }
 ```
 
+Another good paper that you should read is ["Get me off Your Fucking Mailing List"](https://www.scs.stanford.edu/~dm/home/papers/remove.pdf) by David Mazières and Eddie Kohler:
+
+```
+@article{remove,
+   title={Get me off Your Fucking Mailing List},
+   url={https://www.scs.stanford.edu/~dm/home/papers/remove.pdf},
+   author={David Mazières and Eddie Kohler},
+   year={2005},
+}
+```
+
 ### Games
 
 One of our Chicklumni created this [game](https://cianokias.itch.io/wild-chicken-university):
