--- a/app/pages/alumni/page.mdx
+++ b/app/pages/alumni/page.mdx
@@ -16,11 +16,11 @@ import Image from "next/image"
 
 ### GitHub
 
-If you would like to show case Wild Chicken University on your GitHub profile page, please open an issue 
+If you would like to show case Wild Chicken University on your GitHub profile page,  
 using the **"Alumni Application"** template in our GitHub repo to request an invite to the organization.
 
 
-<Button variant="default">[GitHub](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new?template=apply.md)</Button>
+<Button variant="default">[GitHub](https://github.com/WildChickenUniversity/WildChickenUniversity/issues/new?template=apply.yaml)</Button>
 
 If your application is accepted, you will receive an offer email with an invitation link to the Alumni team. 
 Alternatively, you can try [this link](https://github.com/orgs/WildChickenUniversity/invitation?via_email=1).
@@ -41,6 +41,8 @@ We are also a proud member of [U4 Group](https://github.com/U4Group) of GitHub R
 ### Social Media
 
 At request, we have created an instagram account <Badge asChild variant="default"><a href="https://www.instagram.com/real_wild_chicken_university/" target="_blank">@real_wild_chicken_university</a></Badge> so people can mention it in their profile. 
+
+We also have a linkedin page if you wish to follow: <Badge asChild variant="default"><a href=" http://linkedin.com/company/wild-chicken-university" target="_blank">@wild-chicken-university</a></Badge>
 
 It will, however, not publish content, nor send or receive messages. Any posts, direct messages, or interactions originating from this account should be disregarded as unauthentic.
 
